<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Переключатель уведомлений -->
    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="18sp"
        android:layout_marginBottom="8dp" />

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <!-- Выбор звука уведомления -->
    <TextView
        android:id="@+id/tv_notification_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_notification"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_select_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_sound"/>

    <!-- Экспорт задач -->
    <Button
        android:id="@+id/btn_export_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_tasks"
        android:layout_marginTop="16dp"/>

    <!-- Импорт задач -->
    <Button
        android:id="@+id/btn_import_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_tasks"/>

    <!-- Сброс настроек -->
    <Button
        android:id="@+id/btn_reset_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_settings"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white"/>

</LinearLayout>